--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
       <div class="dice">
         <p>Player 1</p>
-        <img class="img1" src="C:\Users\Lenovo\Desktop\T\web development\Dicee Challenge - Starting Files\images\dice6.png">
+        <img class="img1" src="images\dice6.png">
       </div>
 
       <div class="dice">
         <p>Player 2</p>
-        <img class="img2" src="C:\Users\Lenovo\Desktop\T\web development\Dicee Challenge - Starting Files\images\dice6.png">
+        <img class="img2" src="images\dice6.png">
       </div>
 
     </div>
@@ -28,7 +28,7 @@
   </body>
 
   <footer>
-    www 🎲 App Brewery 🎲 com
+    Created by Tejas Adhikari
   </footer>
   <script src="index.js" charset="utf-8"></script>
 </html>
